# CppFP

./: .gitignore  CMakeLists.txt
docs/: 0-ranges.adoc  0-ranges.md  00-Ref.adoc  1-purefunctions.adoc  1-purefunctions.md  2-higher-order-function.adoc  2-higher-order-function.md  CppFP.adoc
examples/0-ranges/: 0-ranges.cc  CMakeLists.txt
examples/1-purefunctions/: CMakeLists.txt
examples/2-higher-order-function/: 2-higher-order-function.cc  CMakeLists.txt
examples/2-higher-order-function-2/: 2-higher-order-function-2.cc  CMakeLists.txt
examples/3-function-objects/: 3-function-objects-1.cc  CMakeLists.txt
